--- a/style.css
+++ b/style.css
@@ -4,24 +4,24 @@ body {
     color: #333;
     font-family: Lato, sans-serif;
 }
-.aaa {
+.header {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
-.aaa img {
+.header img {
     width: 100%;
 }
-.aaa .more_inf {
+.header .header__more-inf {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+.header { text-align: center;
 }
 }
-.centered-main-page-element {
+.main {
     display: block;
     width: 500px;
     margin: 0 auto 0;
@@ -67,7 +67,7 @@ label[for="new-task"] {
     margin: 0;
     text-transform: uppercase;
 }
-input[type="text"] {
+.main__input {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -79,7 +79,7 @@ input[type="text"] {
     font-family: Lato, sans-serif;
     color: #888;
 }
-input[type="text"]:focus {
+.main__input:focus {
     color: #333;
 }
 
@@ -112,43 +112,43 @@ li > * {
 li > input[type="checkbox"] {
     margin: 0 10px;
 }
-li > label {
+li > .main__label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-li >    input[type="text"] {
+li > .main__input {
     width: 226px
 }
-li > button.delete:hover {
+li > .main__button-delete:hover {
     color: #CF2323;
 }
-button.delete img {
+.main__button-delete img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.main__button-delete img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+ul#completed-tasks .main__label {
     text-decoration: line-through
     color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+ul li .main__input-text {
     display:none
 }
 
-ul li.editMode input[type=text] {
+.main__edit-mode .main__input-text {
     display:inline-block;
     width:224px
 }
 
-ul li.editMode label {
+.main__edit-mode .main__label {
     display:none;
 }
