--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.body {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
@@ -10,7 +10,7 @@ body {
     display: block;
     text-align: right;
 }
-.header img {
+.header__img{
     width: 100%;
 }
 .header .header__more-inf {
@@ -34,17 +34,17 @@ body {
 .task-row-wrapper {
     display: flex;
 }
-ul {
+.incomplete-tasks, .completed-tasks {
     margin:0;
     padding: 0px;
 }
-li, h3 {
+.incomplete-tasks__item, .completed-tasks__item, .main__head {
     list-style:none;
 }
-input,button{
+.main__input, .main__button{
     outline:none;
 }
-button {
+.main__button {
     background: none;
     border: 0px;
     color: #888;
@@ -53,12 +53,12 @@ button {
     font-family: Lato, sans-serif;
     cursor: pointer;
 }
-button:hover {
+.main__button:hover {
     color: #3a3A3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.main__head,
+.adding__label {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -84,19 +84,19 @@ label[for="new-task"] {
 }
 
 /* New Task */
-label[for="new-task"] {
+.adding__label {
     display: block;
     margin: 0 0 20px;
 }
-input#new-task {
+.main__input-new-task {
     width: 318px;
 }
-p > button:hover {
+.main__button-add:hover {
     color: #0FC57C;
 }
 
 /* Task list */
-li {
+.incomplete-tasks__item, .completed-tasks__item {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -105,42 +105,44 @@ li {
     justify-content: space-between;
     align-items: center;
 }
-li > * {
+.incomplete-tasks__item ,
+.completed-tasks__item {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.main__input-checkbox {
     margin: 0 10px;
 }
-li > .main__label {
+.main__label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-li > .main__input {
+.main__input-text {
     width: 226px
 }
-li > .main__button-delete:hover {
+.main__button-delete:hover {
     color: #CF2323;
 }
-.main__button-delete img {
+.main__button-delete .main__del-icon {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-.main__button-delete img:hover {
+.main__button-delete .main__del-icon:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks .main__label {
-    text-decoration: line-through
+.completed-tasks .main__label {
+    text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
-ul li .main__input-text {
+.incomplete-tasks .main__input-text,
+.completed-tasks .main__input-text {
     display:none
 }
 
