--- a/style.css
+++ b/style.css
@@ -1,57 +1,60 @@
 /* Basic Style */
 .body {
-    background-color: #f8f8f8;
-    color: #333;
-    font-family: Lato, sans-serif;
+  background-color: #f8f8f8;
+  color: #333;
+  font-family: Lato, sans-serif;
 }
 .header {
-    width: 500px;
-    margin: 0 auto;
-    display: block;
-    text-align: right;
+  width: 500px;
+  margin: 0 auto;
+  display: block;
+  text-align: right;
 }
 .header__img{
-    width: 100%;
+  width: 100%;
 }
 .header .header__more-inf {
-    font-family: fantasy, cursive;
+  font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.header { text-align: center;
-}
+
+  .header { 
+    text-align: center;
+  }
+
 }
 .main {
-    display: block;
-    width: 500px;
-    margin: 0 auto 0;
+  display: block;
+  width: 500px;
+  margin: 0 auto 0;
 }
 .task {
-    width: 56%;
-    display: inline-block;
-    flex-grow: 1
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1
 }
 .task-row-wrapper {
-    display: flex;
+  display: flex;
 }
 .incomplete-tasks, .completed-tasks {
-    margin:0;
-    padding: 0px;
+  margin:0;
+  padding: 0px;
 }
 .incomplete-tasks__item, .completed-tasks__item, .main__head {
-    list-style:none;
+  list-style:none;
 }
 .main__input, .main__button{
-    outline:none;
+  outline:none;
 }
 .main__button {
-    background: none;
-    border: 0px;
-    color: #888;
-    font-size: 15px;
-    width: 60px;
-    font-family: Lato, sans-serif;
-    cursor: pointer;
+  background: none;
+  border: 0px;
+  color: #888;
+  font-size: 15px;
+  width: 60px;
+  font-family: Lato, sans-serif;
+  cursor: pointer;
 }
 .main__button:hover {
     color: #3a3A3a;
@@ -59,25 +62,25 @@
 /* Heading */
 .main__head,
 .adding__label {
-    color: #333;
-    font-weight: 700;
-    font-size: 15px;
-    border-bottom: 2px solid #333;
-    padding: 30px 0 10px;
-    margin: 0;
-    text-transform: uppercase;
+  color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
 }
 .main__input {
-    margin: 0;
-    font-size: 18px;
-    line-height: 18px;
-    height: 21px;
-    padding: 0 9px;
-    border: 1px solid #dDd;
-    background: #FFF;
-    border-radius: 6px;
-    font-family: Lato, sans-serif;
-    color: #888;
+  margin: 0;
+  font-size: 18px;
+  line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid #dDd;
+  background: #FFF;
+  border-radius: 6px;
+  font-family: Lato, sans-serif;
+  color: #888;
 }
 .main__input:focus {
     color: #333;
@@ -85,72 +88,72 @@
 
 /* New Task */
 .adding__label {
-    display: block;
-    margin: 0 0 20px;
+  display: block;
+  margin: 0 0 20px;
 }
 .main__input-new-task {
-    width: 318px;
+  width: 318px;
 }
 .main__button-add:hover {
-    color: #0FC57C;
+  color: #0FC57C;
 }
 
 /* Task list */
 .incomplete-tasks__item, .completed-tasks__item {
-    overflow: hidden;
-    padding: 20px 0;
-    border-bottom: 1px solid #eee;
+  overflow: hidden;
+  padding: 20px 0;
+  border-bottom: 1px solid #eee;
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .incomplete-tasks__item ,
 .completed-tasks__item {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 .main__input-checkbox {
     margin: 0 10px;
 }
 .main__label {
-    padding-left: 10px;
-    box-sizing: border-box;
-    font-size: 18px;
-    width: 226px;
+  padding-left: 10px;
+  box-sizing: border-box;
+  font-size: 18px;
+  width: 226px;
 }
 .main__input-text {
-    width: 226px
+  width: 226px
 }
 .main__button-delete:hover {
-    color: #CF2323;
+  color: #CF2323;
 }
 .main__button-delete .main__del-icon {
-    height: 2em;
-    transform: rotateZ(45deg);
-    transition: transform 200ms ease-in;
+  height: 2em;
+  transform: rotateZ(45deg);
+  transition: transform 200ms ease-in;
 }
 .main__button-delete .main__del-icon:hover {
-    transform: rotateZ(0);
+  transform: rotateZ(0);
 }
 
 /* Completed */
 .completed-tasks .main__label {
-    text-decoration: line-through
-    color: #888;
+  text-decoration: line-through
+  color: #888;
 }
 
 /* Edit Task */
 .incomplete-tasks .main__input-text,
 .completed-tasks .main__input-text {
-    display:none
+  display:none
 }
 
 .main__edit-mode .main__input-text {
-    display:inline-block;
-    width:224px
+  display:inline-block;
+  width:224px
 }
 
 .main__edit-mode .main__label {
-    display:none;
+  display:none;
 }
