--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@
 
 /* Completed */
 .completed-tasks .main__label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
